--- a/package.json
+++ b/package.json
@@ -4,10 +4,15 @@
   "description": "setup a project with webpack",
   "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "testw": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack serve --open",
     "server": "node server.js",
-    "build": "webpack"
+    "build": "webpack",
+    "test": "jest --coverage"
+  },
+  "jest": {
+    "testEnvironment": "jsdom",
+    "verbose": true
   },
   "repository": {
     "type": "git",
@@ -21,14 +26,21 @@
   },
   "homepage": "https://github.com/OsvaldoBC/webpackOB#readme",
   "devDependencies": {
+    "@babel/core": "^7.19.3",
+    "@babel/preset-env": "^7.19.3",
     "babel-eslint": "^10.1.0",
+    "babel-jest": "^29.1.2",
     "css-loader": "^6.7.1",
     "csv-loader": "^3.0.5",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.26.0",
     "express": "^4.18.1",
+    "global-jsdom": "^8.6.0",
     "html-webpack-plugin": "^5.5.0",
+    "jest": "^29.1.2",
+    "jest-environment-jsdom": "^29.1.2",
+    "jsdom": "^20.0.1",
     "style-loader": "^3.3.1",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
